objects/ContentVersion.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is a Lookup to the Account object allowing you to match Content to an Account</description>
        <inlineHelpText>Choose an Account to match this Content to.</inlineHelpText>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Content</relationshipLabel>
        <relationshipName>Content</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is to Lookup a Contact related to uploaded Content</description>
        <inlineHelpText>Choose a Contact for which this Content should be linked to</inlineHelpText>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Content</relationshipLabel>
        <relationshipName>Content</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Publication_Date__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <description>This is a field for choosing the publication date of Content</description>
        <inlineHelpText>Choose a publication date for your Content</inlineHelpText>
        <label>Publication Date</label>
        <type>Date</type>
    </fields>
</CustomObject>